--- a/app/build.gradle
+++ b/app/build.gradle
@@ -75,6 +75,8 @@ dependencies {
 
     implementation 'androidx.recyclerview:recyclerview:1.3.0'
 
+
+
     // coordinator and appBarLayout
     implementation "androidx.coordinatorlayout:coordinatorlayout:1.2.0"
     implementation 'androidx.appcompat:appcompat:1.0.0'
@@ -83,4 +85,10 @@ dependencies {
     def lifecycle_version = "2.6.1"
     // ViewModel
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
+
+    def life_version = "2.2.0"
+
+// LiveData
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:$life_version"
+
 }
