--- a/app/build.gradle
+++ b/app/build.gradle
@@ -91,4 +91,11 @@ dependencies {
 // LiveData
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:$life_version"
 
+    // RxJava2
+    implementation "io.reactivex.rxjava2:rxjava:2.1.2"
+    implementation "io.reactivex.rxjava2:rxandroid:2.0.1"
+// RxBindig
+    implementation "com.jakewharton.rxbinding2:rxbinding:2.0.0"
+    implementation "com.jakewharton.rxbinding2:rxbinding-kotlin:2.0.0"
+
 }
